css/marcopolo.css
/* ... */
.lh1 {
  line-height: 1;
}

.tty50 {
  transform: translateY(50%);
}

.ttn {
  text-transform: none;
}

.row-reverse {
  flex-direction: row-reverse;
}

.no-deco,
.no-deco * {
  text-decoration: none;
}

.header-nav li {
  margin-left: 20px;
}

.has-after,
.header-nav a,
.footer-nav-inner a,
.details-header > p {
  text-decoration: none;
  display: block;
  position: relative;
  display: inline-flex;
  height: max-content;
  padding-bottom: 4px;
  line-height: 1;
  font-family: var(--suisse);
  color: #000;
}

.header-nav a {
  font-size: 0.875em;
}

.has-after::after,
.header-nav a::after,
.footer-nav-inner a::after,
.details-header > p::after {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 1px;
  background-color: #000;
  content: '';
  transform: scaleX(0);
  transform-origin: left;
  transition: all 0.3s ease;
}

.has-after.f2::after,
.has-after.f1::after,
.has-after.f3::after {
  /* height: 1px; */
}

.grey.has-after {
  color: var(--grey);
}

.grey.has-after:hover {
  color: #fff;
}

.details-header > p {
  font-family: var(--akzi);
  text-transform: initial;
  color: var(--cream);
}

.details-header > p::after {
  background-color: var(--cream);
}

.has-after.black::after {
  background-color: #000;
}

.has-after.black {
  color: #000;
}

.has-after.white {
  color: #fff;
}

.has-after.white::after {
  background-color: #fff;
}

.has-after.eki-violet:after {
  background-color: var(--violet);
}

.footer-nav-inner a::after {
  background-color: #000;
}

.has-after:hover::after,
.header-nav a:hover::after,
.footer-nav-inner a:hover::after,
.details-header > p.selected::after,
.shop-artist:hover .has-after::after {
  transform: scaleX(1);
}

.header-nav a::after {
  background-color: var(--grey);
}

.jic {
  justify-content: space-between;
  align-items: center;
}

.small-icon {
  height: 8px;
}

/* FILTERS CATEGORY */

.filters-mb:hover p {
  color: var(--grey) !important;
}

.filters-mb p.active {
  color: black;
}

.filters-mb p:hover {
  color: black !important;
}

.filters-mb p.active::after {
  transform: scaleX(1);
}

.filters-mb p.active::after {
  transform: scaleX(1);
}

.filters-mb:hover p::after {
  transform: scaleX(0) !important;
}

.filters-mb p:hover::after {
  transform: scaleX(1) !important;
}

/* FAQ */
.faq-image {
  width: 25%;
  height: 80%;
  bottom: -10%;
}

.faq-span-title,
.mb-span {
  border: 1px solid black;
  height: 1px;
  align-self: center;
  flex-grow: 1;
  margin: 0 20px;
}

.mb-span {
  margin: 0 0 0 20px;
}

.mb-span.m-0 {
  margin: 0;
}

.faq-filter > h2:not(:first-child) {
  color: var(--grey);
}

.faq-filter h2 {
  transition: all 0.3s ease;
}

.faq-filter > h2:hover {
  color: #000 !important;
}

.faq-content {
  /* min-height: 500px; */
}

.faq-item {
  position: relative;
}

.faq-item::after {
  position: absolute;
  top: 0;
  right: 0;
  margin-top: 12px;
  margin-right: 20px;
  content: '+';
  color: #000;
  font-size: 24px;
  transition: transform 0.3s ease;
  transform-origin: center;
}

.faq-item[area-expanded='true']::after {
  transform: rotate(45deg);
}

.faq-item p:last-child,
.faq-item p:nth-child(2) {
  color: var(--darkgrey);
  margin-top: 10px;
}

.faq-item {
  max-height: min-content;
  max-height: -moz-min-content;
  max-height: intrinsic;
  transition: all 0.3s ease;
  background-color: var(--lightpink);
  cursor: pointer;
}

.faq-item[area-expanded='true'] {
  max-height: 500px;
}

.faq-item[area-expanded='false'] p:not(:first-child) {
  display: none;
}

.faq-item[area-expanded='true'] p:not(:first-child) {
  transition: all 0.3s ease;
}

.faq-question {
  position: relative;
}

.faq-question::after {
  position: absolute;
  top: 50%;
  right: 10px;
  transform: translateY(-50%);
  content: '';
  background-image: url('/wp-content/uploads/2020/01/arrow-pink.svg');
  height: 100%;
  transition: all 0.3s ease;
  width: 8.5px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.faq-item[area-expanded='true'] .faq-question::after {
  transform: translateY(-50%) rotate(90deg);
}

.pre-load {
  position: fixed;
  height: 100%;
  width: 100%;
  transform: translateX(100%);
  top: 0;
  pointer-events: none;
  left: 0;
  z-index: 9999;
}

@keyframes animate {
  0% {
    background-color: #fff;
  }
  100% {
    background-color: #c4c4c4;
  }
}

/* @keyframes load {
  from {
    left: -150px;
  }
  to {
    left: 100%;
  }
}

.pre-load.animate::before {
  content: '';
  display: block;
  position: absolute;
  left: -150px;
  top: 0;
  height: 100%;
  width: 100%;
  background: linear-gradient(to right, transparent 0%, #e8e8e8 50%, transparent 100%);
  animation: load 1s infinite linear;
} */

h1.f0 {
  font-size: 5rem;
  letter-spacing: -1px;
}

#main,
#primary {
  /* margin-top: 64px; */
}

#primary.mt0,
#main.mt0 {
  margin-top: 0 !important;
}

.logo {
  z-index: 9999;
}

/* Footer */

footer {
  z-index: 9;
  position: relative;
}

.subscribe-form-button {
  background-image: url(/wp-content/uploads/2020/11/Arrow.svg) !important;
  background-repeat: no-repeat !important;
  background-size: contain !important;
  background: unset;
  width: 30px;
}

.footer-links a,
.by-marco {
  width: max-content;
  margin-bottom: 15px;
  font-size: 14px;
}

.white-icons svg path {
  fill: #fff;
}

.form-container input {
  background: unset;
  border: 0 !important;
  border-bottom: 1px solid white !important;
  outline: 0 !important;
  margin-bottom: 20px;
  padding-bottom: 5px;
  color: white;
}

#mce-success-response,
#mce-error-response {
  display: flex;
  height: max-content;
  margin-bottom: auto;
  margin-right: 10px;
  color: white;
}

#mce-success-response a,
#mce-error-response a {
  color: var(--red);
}

.form-container input::placeholder {
  color: white;
  padding-bottom: 5px;
}

.form-container .anchor {
  /* background-color: black; */
  border-bottom: 0 !important;
  color: #fff;
  /* padding: 20px 25px; */
}

.insta-container svg path {
  fill: white;
}
/* ... */

